--- a/common/template.html
+++ b/common/template.html
@@ -9,6 +9,53 @@
   <link rel="stylesheet" href="../common.css"> <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
 </head>
+<script>
+(function () {
+  const P = new URLSearchParams(location.search);
+  const mod = P.get('mod'); // 例: /drills/1nen/tashizan_10made/drill.js
+
+  function applyMetaAndStart() {
+    // drill.js が定義するメタ情報（任意項目は存在チェックで反映）
+    const meta = window.drillMeta || {};
+    const h1 = document.getElementById('main-title');
+    const h2 = document.getElementById('sub-title');
+
+    if (meta.main) h1.textContent = meta.main;
+    if (meta.sub)  { h2.textContent = meta.sub; if (!document.title) document.title = meta.sub; }
+
+    if (meta.appId) document.body.dataset.appId = meta.appId;
+    if (meta.theme) document.body.dataset.theme = meta.theme; // 例: theme_sky
+
+    const cfg = {};
+    if (meta.pointsPerQuestion != null)  cfg.pointsPerQuestion  = meta.pointsPerQuestion;
+    if (meta.timeLimitPerQuestion != null) cfg.timeLimitPerQuestion = meta.timeLimitPerQuestion;
+    if (meta.starThresholds) cfg.starThresholds = meta.starThresholds;
+
+    // 共通エンジン起動（common.js）
+    initializeDrillApp(cfg);
+  }
+
+  if (mod) {
+    // ドリルJSを動的ロード
+    const s = document.createElement('script');
+    s.src = mod;
+    s.onload  = applyMetaAndStart;
+    s.onerror = () => {
+      const r = document.getElementById('result');
+      if (r) r.textContent = 'ドリルファイルを読み込めませんでした。URL（mod）をご確認ください。';
+    };
+    document.body.appendChild(s);
+  } else {
+    // modなしでも、手動でwindow.generateProblemsやdrillMetaが定義されていれば起動
+    if (window.generateProblems || window.drillMeta) applyMetaAndStart();
+    else {
+      const r = document.getElementById('result');
+      if (r) r.textContent = 'このテンプレートを使うには、?mod=/path/to/drill.js を指定してください。';
+    }
+  }
+})();
+</script>
+
 <body>
   <h1 id="main-title"></h1>
   <h2 id="sub-title"></h2>
@@ -39,8 +86,6 @@
   <script src="../themes.js"></script>
   
   <script src="../common.js"></script>
-  
-  <script src="../configs/kuku_5dan_junban.js"></script>
   
 </body>
 </html>
