--- a/2nen/10_kakezan1/10kuku_5dan_junban.html
+++ b/2nen/10_kakezan1/10kuku_5dan_junban.html
@@ -40,7 +40,7 @@
   
   <script src="common.js"></script>
   
-  <script src="kuku_5dan_junban.js"></script>
+  <script src="10kuku_5dan_junban.js"></script>
   
 </body>
 </html>
