--- a/2nen/11_kakezan2/110kuku_16789dan_random.html
+++ b/2nen/11_kakezan2/110kuku_16789dan_random.html
@@ -48,7 +48,7 @@
   <script src="common.js"></script>
   
   <!-- 3. このページで表示したいドリルの設定ファイル -->
-  <script src="configs/kuku_16789dan_random.js"></script>
+  <script src="110kuku_16789dan_random.js"></script>
   
 </body>
 </html>
