--- a/2nen/11_kakezan2/130kuku_81mondai.html
+++ b/2nen/11_kakezan2/130kuku_81mondai.html
@@ -48,7 +48,7 @@
   <script src="common.js"></script>
   
   <!-- 3. このページで表示したいドリルの設定ファイル -->
-  <script src="configs/kuku_81mondai.js"></script>
+  <script src="130kuku_81mondai.html"></script>
   
 </body>
 </html>
