--- a/2nen/02_tashizan_hikizan/90_kurisagari_general.html
+++ b/2nen/02_tashizan_hikizan/90_kurisagari_general.html
@@ -4,19 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>八の段の九九（じゅんばん）</title>
+  <title>（タイトル未設定）</title>
   
-  <!-- 外部ファイルを読み込み -->
-  <link rel="stylesheet" href="common.css">
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+  <link rel="stylesheet" href="common.css"> <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
 </head>
 <body>
-  <!-- h1とh2は、JSによって自動で設定されます -->
   <h1 id="main-title"></h1>
   <h2 id="sub-title"></h2>
 
-  <!-- ====== 以下はすべてのドリルで共通のHTML構造 ====== -->
   <div id="start-area" style="text-align:center; margin:40px 0;">
     <button id="start-btn">スタート！</button>
   </div>
@@ -40,15 +36,11 @@
   </div>
 
 
-  <!-- ====== 必要なJavaScriptファイルを順番に読み込みます ====== -->
-  <!-- 1. テーマパレット（色定義）-->
   <script src="themes.js"></script>
   
-  <!-- 2. 共通エンジン（アプリの動作）-->
   <script src="common.js"></script>
-  
-  <!-- 3. このページで表示したいドリルの設定ファイル -->
-  <script src="50kuku_8dan_junban.js"></script>
+
+  <script src="90_kurisagari_general.js"></script>
   
 </body>
 </html>
