--- a/2nen/10_kakezan1/50kuku_3dan_junban.html
+++ b/2nen/10_kakezan1/50kuku_3dan_junban.html
@@ -48,7 +48,7 @@
   <script src="common.js"></script>
   
   <!-- 3. このページで表示したいドリルの設定ファイル -->
-  <script src="configs/kuku_3dan_junban.js"></script>
+  <script src="50kuku_3dan_junban.js"></script>
   
 </body>
 </html>
