--- a/2nen/11_kakezan2/120kuku_10mondai.html
+++ b/2nen/11_kakezan2/120kuku_10mondai.html
@@ -48,7 +48,7 @@
   <script src="common.js"></script>
   
   <!-- 3. このページで表示したいドリルの設定ファイル -->
-  <script src="configs/kuku_10mondai.js"></script>
+  <script src="120kuku_10mondai.js"></script>
   
 </body>
 </html>
