--- a/2nen/11_kakezan2/40kuku_7dan_barabara.html
+++ b/2nen/11_kakezan2/40kuku_7dan_barabara.html
@@ -48,7 +48,7 @@
   <script src="common.js"></script>
   
   <!-- 3. このページで表示したいドリルの設定ファイル -->
-  <script src="configs/kuku_7dan_barabara.js"></script>
+  <script src="40kuku_7dan_barabara.js"></script>
   
 </body>
 </html>
