--- a/2nen/11_kakezan2/90kuku_1dan_junban.html
+++ b/2nen/11_kakezan2/90kuku_1dan_junban.html
@@ -48,7 +48,7 @@
   <script src="common.js"></script>
   
   <!-- 3. このページで表示したいドリルの設定ファイル -->
-  <script src="configs/kuku_1dan_junban.js"></script>
+  <script src="90kuku_1dan_junban.js"></script>
   
 </body>
 </html>
