--- a/2nen/11_kakezan2/template.html
+++ b/2nen/11_kakezan2/template.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>わくわく算数ドリル</title>
+  <title>（タイトル未設定）</title>
   
-  <link rel="stylesheet" href="../common.css"> <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+  <link rel="stylesheet" href="common.css"> <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
 </head>
 <body>
@@ -36,11 +36,11 @@
   </div>
 
 
-  <script src="../themes.js"></script>
+  <script src="themes.js"></script>
   
-  <script src="../common.js"></script>
-  
-  <script src="../configs/kuku_5dan_junban.js"></script>
+  <script src="common.js"></script>
+
+  <script src=""></script>
   
 </body>
 </html>
