--- a/1nen/07_hikizan1/18-6_hikizan_10made.html
+++ b/1nen/07_hikizan1/18-6_hikizan_10made.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <title>□にはいる かずは？</title>
-  
-  <link rel="stylesheet" href="../../common/common.css">
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+  <title>１０までのひきざん</title>
 
+  <!-- 共通スタイル -->
+  <link rel="stylesheet" href="common.css" />
+
+  <!-- 紙吹雪（ハイスコア更新時など） -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 </head>
 <body>
   <h1 id="main-title"></h1>
@@ -36,11 +37,11 @@
     <div id="history-area">りれき（１０件）<br><ul id="history-list"></ul></div>
   </div>
 
-  <script src="./themes.js"></script>
-  <script src="../../common/common.js"></script>
-  
-  <!-- ★新しい設定ファイルを読み込みます★ -->
-  <script src="./configs/tashizan_shikaku.js"></script>
-  
+  <!-- 共通ロジック -->
+  <script src="themes.js"></script>
+  <script src="common.js"></script>
+
+  <!-- このドリル固有 -->
+  <script src="18-6_hikizan_10made.js"></script>
 </body>
 </html>
