--- a/1nen/09_10yori_ookii/35-2_sikaku_ni_hairukazu.html
+++ b/1nen/09_10yori_ookii/35-2_sikaku_ni_hairukazu.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <title>１０たす いくつ</title>
-  
-  <link rel="stylesheet" href="../../common/common.css">
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+  <title>□にはいるかず</title>
 
+  <!-- 共通スタイル（同一フォルダ） -->
+  <link rel="stylesheet" href="common.css" />
+
+  <!-- 紙吹雪（ハイスコア更新時など） -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 </head>
 <body>
   <h1 id="main-title"></h1>
@@ -36,13 +37,11 @@
     <div id="history-area">りれき（１０件）<br><ul id="history-list"></ul></div>
   </div>
 
-  <script src="./themes.js"></script>
-  
-  <!-- ★推奨版のcommon.jsを読み込みます★ -->
-  <script src="../../common/common.js"></script>
-  
-  <!-- ★このドリル専用の設定ファイルを読み込みます★ -->
-  <script src="./configs/tashizan_10plus.js"></script>
-  
+  <!-- 共通ロジック（同一フォルダ） -->
+  <script src="themes.js"></script>
+  <script src="common.js"></script>
+
+  <!-- このドリル固有 -->
+  <script src="35-2_sikaku_ni_hairukazu.js"></script>
 </body>
 </html>
