--- a/1nen/21_100made_kazu/120_nanjuuno_keisan.html
+++ b/1nen/21_100made_kazu/120_nanjuuno_keisan.html
@@ -12,7 +12,7 @@
 <body>
   <!-- 見出し（common.js が上書きするため id は既定のまま） -->
   <h1 id="main-title"></h1>
-  <h2 id="sub-title"></h2>
+  <h2>なんじゅうの けいさん</h2>
 
   <div id="start-area" style="text-align:center; margin:40px 0;">
     <button id="start-btn">スタート！</button>
