--- a/1nen/21_100made_kazu/121-6,8_nanjuno_keisan.html
+++ b/1nen/21_100made_kazu/121-6,8_nanjuno_keisan.html
@@ -12,7 +12,7 @@
 <body>
   <!-- h1/h2 は common.js が埋め込み -->
   <h1 id="main-title"></h1>
-  <h2 id="sub-title"></h2>
+  <h2>なんじゅうの　けいさん⑵</h2>
 
   <div id="start-area" style="text-align:center; margin:40px 0;">
     <button id="start-btn">スタート！</button>
