--- a/1nen/21_100made_kazu/122-10_niketa_tasu_hitoketa_kuriagarinasi.html
+++ b/1nen/21_100made_kazu/122-10_niketa_tasu_hitoketa_kuriagarinasi.html
@@ -12,7 +12,7 @@
 <body>
   <!-- 見出しは common.js が埋め込み -->
   <h1 id="main-title"></h1>
-  <h2 id="sub-title"></h2>
+  <h2>二けた＋一けた（くりあがりなし）<h2>
 
   <div id="start-area" style="text-align:center; margin:40px 0;">
     <button id="start-btn">スタート！</button>
