--- a/2nen/02_tashizan_hikizan/20_kurikagari_2.html
+++ b/2nen/02_tashizan_hikizan/20_kurikagari_2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>（タイトル未設定）</title>
+  <title>二けた ＋ 一けたのくり上がり⑵</title>
   
   <link rel="stylesheet" href="common.css"> <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
