--- a/2nen/04_nagasa/40-6_mirime-toru.html
+++ b/2nen/04_nagasa/40-6_mirime-toru.html
@@ -2,14 +2,15 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <title>２０いくつのひき算のくり下がり</title>
-  
-  <link rel="stylesheet" href="common.css"> <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>４　長さ</title>
 
+  <!-- 共通 -->
+  <link rel="stylesheet" href="common.css" />
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 </head>
 <body>
+  <!-- 見出しは common.js が埋め込み（config.mainTitle/title を表示） -->
   <h1 id="main-title"></h1>
   <h2 id="sub-title"></h2>
 
@@ -19,6 +20,7 @@
 
   <div id="problems-section" style="display:none;">
     <div id="problems-wrapper"></div>
+
     <div class="button-area">
       <button id="check-answers">まるつけ</button>
       <button id="retry">もういちど</button>
@@ -35,12 +37,8 @@
     <div id="history-area">りれき（１０件）<br><ul id="history-list"></ul></div>
   </div>
 
-
   <script src="themes.js"></script>
-  
   <script src="common.js"></script>
-
-  <script src="50kurisagari_20s.js"></script>
-  
+  <script src="40-6_mirime-toru.js"></script>
 </body>
 </html>
