--- a/1nen/21_100made_kazu/120_nanjuuno_keisan.html
+++ b/1nen/21_100made_kazu/120_nanjuuno_keisan.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>１００までのかずの　けいさん</title>
+  <title>なんじゅうの けいさん</title>
 
   <!-- 共通 -->
   <link rel="stylesheet" href="common.css" />
