--- a/1nen/21_100made_kazu/123-12_niketa_hiku_hitoketa_kurisagarinasi.html
+++ b/1nen/21_100made_kazu/123-12_niketa_hiku_hitoketa_kurisagarinasi.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>２１　１００までのかずの　けいさん</title>
+  <title>二けた−一けた（くりさがりなし）</title>
 
   <!-- 共通 -->
   <link rel="stylesheet" href="common.css" />
