--- a/3nen/1_kuku_hyo_kakezan/13-2,3_10no_kakezan.html
+++ b/3nen/1_kuku_hyo_kakezan/13-2,3_10no_kakezan.html
@@ -2,21 +2,16 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <title>わくわく算数ドリル</title>
-  
-  <!-- 外部ファイルを読み込み -->
-  <link rel="stylesheet" href="common.css">
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>１０のかけざん</title>
 
+  <link rel="stylesheet" href="common.css" />
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 </head>
 <body>
-  <!-- h1とh2は、JSによって自動で設定されます -->
   <h1 id="main-title"></h1>
   <h2 id="sub-title"></h2>
 
-  <!-- ====== 以下はすべてのドリルで共通のHTML構造 ====== -->
   <div id="start-area" style="text-align:center; margin:40px 0;">
     <button id="start-btn">スタート！</button>
   </div>
@@ -39,16 +34,8 @@
     <div id="history-area">りれき（１０件）<br><ul id="history-list"></ul></div>
   </div>
 
-
-  <!-- ====== 必要なJavaScriptファイルを順番に読み込みます ====== -->
-  <!-- 1. テーマパレット（色定義）-->
   <script src="themes.js"></script>
-  
-  <!-- 2. 共通エンジン（アプリの動作）-->
   <script src="common.js"></script>
-  
-  <!-- 3. このページで表示したいドリルの設定ファイル -->
-  <script src="configs/kakezan_10.js"></script>
-  
+  <script src="13-2,3_10no_kakezan.js"></script>
 </body>
 </html>
