--- a/3nen/2_warizan/30-2_matome.html
+++ b/3nen/2_warizan/30-2_matome.html
@@ -2,12 +2,11 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <title>わくわく算数ドリル</title>
-  
-  <link rel="stylesheet" href="../common.css"> <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>まとめ</title>
 
+  <link rel="stylesheet" href="common.css" />
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 </head>
 <body>
   <h1 id="main-title"></h1>
@@ -35,12 +34,8 @@
     <div id="history-area">りれき（１０件）<br><ul id="history-list"></ul></div>
   </div>
 
-
-  <script src="../themes.js"></script>
-  
-  <script src="../common.js"></script>
-  
-  <script src="../configs/kuku_5dan_junban.js"></script>
-  
+  <script src="themes.js"></script>
+  <script src="common.js"></script>
+  <script src="30-2_matome.js"></script>
 </body>
 </html>
